desktop-themes/GreenLaguna/gtk-3.0/gtk-widgets.css
/* ... */
.scrollbar.trough {
	background-color: transparent;
	background-image: none;
	border-style: none;
	border-width: 0px;
}

.scrollbar.slider {
	background-color: transparent;
	background-image: linear-gradient(to top,
	                                  shade(@toolbar_gradient_base, 0.82),
	                                  white);
	border-color: transparent;
	border-radius: 5px;
	border-width: 3px 2px 3px;
	border-image: none;
}

.scrollbar.slider.vertical {
	border-width: 1px;
	border-radius: 6px;
	background-image: linear-gradient(to top,
	                                  shade(@toolbar_gradient_base, 0.82),
	                                  white);
}

.scrollbar.slider.horizontal {
	border-width: 1px;
	border-radius: 6px;
	background-image: linear-gradient(to left,
	                                  shade(@toolbar_gradient_base, 0.82),
	                                  white);
}

.scrollbar.slider:prelight {
	background-image: linear-gradient(to top,
	                                  shade(@toolbar_gradient_base, 0.88),
	                                  shade(@theme_bg_color, 1.6));
	border-width: 1px;
	border-color: shade(@button_border, 1.1);
	border-radius: 6px;
}

.scrollbar.slider.vertical:prelight {
	background-image: linear-gradient(to top,
	                                  shade(@theme_bg_color, 1.6),
	                                  shade(@toolbar_gradient_base, 0.88));
	border-width: 1px;
	border-color: shade(@button_border, 1.1);
	border-radius: 6px;
}

.scrollbar.slider.horizontal:prelight {
	background-image: linear-gradient(to left,
	                                  shade(@theme_bg_color, 1.6),
	                                  shade(@toolbar_gradient_base, 0.88));
	border-width: 1px;
	border-color: shade(@button_border, 1.1);
	border-radius: 6px;
}

.scrollbar.slider.horizontal:prelight {
	background-image: linear-gradient(to left,
	                                  shade(@toolbar_gradient_base, 0.88),
	                                  shade(@theme_bg_color, 1.6));
	border-width: 1px;
	border-color: shade(@button_border, 1.1);
	border-radius: 6px;
}

.scrollbar.slider:prelight:active {
	border-width: 1px;
	border-color: shade(@button_border, 1.1);
	border-radius: 6px;
	background-image: linear-gradient(to top,
	                                  shade(@theme_bg_color, 1.5),
	                                  shade(@theme_bg_color, 0.9));
	border-color: shade(@button_border, 1.1);
}

.scrollbar.slider.vertical:prelight:active {
	border-width: 1px;
	border-color: shade(@button_border, 1.1);
	border-radius: 6px;
	background-image: linear-gradient(to left,
	                                  shade(@theme_bg_color, 1.5),
	                                  shade(@theme_bg_color, 0.9));
}

.scrollbar.slider.horizontal:prelight:active {
	border-width: 1px;
	border-color: shade(@button_border, 1.1);
	border-radius: 6px;
	background-image: linear-gradient(to left,
	                                  shade(@theme_bg_color, 1.5),
	                                  shade(@theme_bg_color, 0.9));
}

.scrollbar.button,
.scrollbar.button.horizontal,
.scrollbar.button.vertical {
	color: @theme_fg_color; /*@internal_element_color*/
	border-image: none;
	border-style: none;
	border-width: 0px;
	background-image: none;
	background-color: transparent;
}

.scrollbar.button:hover,
.scrollbar.button.horizontal:hover,
.scrollbar.button.vertical:hover {
	background-image: none;
	background-color: @theme_main_color;
	/*border-color: shade(@highlighted_border, 1.1);*/
	color: shade(@highlighted_border, 0.8);
}

.scrollbar.button:hover:active,
.scrollbar.button.horizontal:hover:active {
	background-image: linear-gradient(to top,
	                                  shade(@theme_bg_color, 1.6),
	                                  shade(@toolbar_gradient_base, 0.88));
	/*border-color: shade(@highlighted_border, 1.1);*/
	border-image: none;
	color: @theme_fg_color;
	border-image: none;
	border-style: none;
	border-width: 0px;
}

.scrollbar.button.vertical:hover:active {
	background-image: linear-gradient(to left,
	                                  shade(@theme_bg_color, 1.6),
	                                  shade(@toolbar_gradient_base, 0.88));
}

.scrollbar.button:insensitive {
	background-image: none;
	background-color: @theme_bg_color;
	color: transparent;
	/*border-color: alpha(@internal_element_color, 0.3);*/
	/* does Nautilus need these? */
	/*border-radius: 4px;
	border-width: 1px;*/
}

.scrollbar.slider:insensitive {
	background-image: none;
	background-color: shade(@theme_bg_color, 1.5);
}

.scrollbar.slider.fine-tune:prelight:active {
	background-image: url("assets/slider_fine_horizontal.svg"),
	                  linear-gradient(to top,
	                                  shade(@theme_bg_color, 1.5),
	                                  shade(@theme_bg_color, 0.9));
	background-repeat: no-repeat;
	background-position: center;
}

.scrollbar.slider.vertical.fine-tune:prelight:active {
	background-image: url("assets/slider_fine_vertical.svg"),
	                  linear-gradient(to left,
	                                  shade(@theme_bg_color, 1.5),
	                                  shade(@theme_bg_color, 0.9));
	background-repeat: no-repeat;
	background-position: center;
}

/*********
 * Menus *
 *********/

/* this controls the general appearance of the menubar */
.menubar {
    background-image: none;
    background-color: @theme_bg_color;
    border-width: 0px;
    border-style: none;
    padding: 0px;
    color: @theme_text_color;
    -GtkWidget-window-dragging: true;
    /*-GtkMenuBar-internal-padding: 0;*/
}

.menubar .menuitem {
    transition: all 300ms ease-out;
    padding: 3px 7px;
}

.menu .menuitem {
    transition: all 300ms ease-out;
    padding: 3px 4px;
}

.menubar .menuitem,
.menu .menuitem {
	border-width: 0px;
	border-style: none;
	background-color: transparent;
}
/* ... */

